# remarkable-diary

./: .gitignore  BUGS.md  GENERATE_PDF.md  HANDOVER.md  PIPELINE_SPEC.md  PROGRESS.md  README.md  SPEC.md  pyproject.toml  rm2.fig
.github/workflows/: build-planner.yml
assets/: e-ink-palette.tokens.json  rm2.fig
assets/Type_ Fonts/: Font family.tokens.json
assets/Type_ Properties/: Default.tokens.json  Large.tokens.json  Small.tokens.json
assets/fonts/EB_Garamond/: OFL.txt
assets/fonts/Inter/: OFL.txt
assets/fonts/Newsreader/: OFL.txt
planner_gen/: build.py  config.py  dates.py  fill.py  fonts.py  svgutil.py
scripts/: render_page.py
src/: background.py  build.py  config.py  dates.py  fill.py  fonts.py  render.py
tests/: test_day_pages.py  test_polish_67_73.py  test_schedule_hours.py  test_touch_targets.py
