[project]
name = "planner-gen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "lxml>=6.1.1",
    "playwright>=1.60.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
planner_gen = "src"
